# MBB

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  DevBlog.py  DevBlog.sql  README.md  conftest.py  database.py  docker-compose.yml  drawSQL-pgsql-export-2025-04-08.sql  manage.py  micro_blogging.py  micro_blogging.sql  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
MBB/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: Dockerfile  __init__.py  manage.py
accounts/config/: __init__.py  settings.py  urls.py
accounts/service/: admin.py  apps.py  authentication.py  client.py  exceptions.py  models.py  tests.py  views.py
accounts/users/: apps.py  models.py  signals.py
authentication/: Dockerfile  __init__.py  manage.py
authentication/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
authentication/service/: __init__.py  admin.py  apps.py  authentication.py  client.py  exceptions.py  models.py  tests.py  views.py
authentication/users/: apps.py  models.py  signals.py
common/: Dockerfile  __init__.py  apps.py  database.py  dtos.py  events.py  exception_handlers.py  managers.py  models.py  presenters.py  response.py
common/config/: settings.py  (+1 more)
config/: asgi.py  settings.py  urls.py  wsgi.py
configuration/: __init__.py
env/: pyvenv.cfg
likes/: manage.py
microblog_common/: __init__.py  session_repository.py
myapp/: models.py
myproject/: settings.py
posts/: manage.py
services/: __init__.py
sessions/: Dockerfile  __init__.py  manage.py
users/: Dockerfile  __init__.py  manage.py
(+280 files in other folders)
